# NBA-data-pipeline-airflow

./: .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
basketball_reference/: __init__.py  api.py  scraper.py
config/: __init__.py  config.py
dags/: bigquery_basketball_reference.py  gcp_connection.py  nba_extract.py  nba_transform.py
dags/modules/: api_basketball_reference.py
nba_dbt/: dbt_project.yml
nba_dbt/models/staging/: schema.yml  stg_games.sql  stg_player_game_stats.sql  stg_players.sql  stg_team_game_stats.sql  stg_teams.sql
