[project]
name = "nba-data-pipeline-airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "configparser>=7.2.0",
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-bigquery>=3.35.1",
    "google-cloud-storage>=3.3.0",
    "google-search-results>=2.4.2",
    "lxml>=6.0.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandas-gbq>=0.29.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytz>=2025.2",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
